<resources>
    <string name="app_name">HouseFinish</string>
    <string name="fragment_home">首页</string>
    <string name="fragment_goods">商城</string>
    <string name="fragment_magic">软装魔法</string>
    <string name="fragment_cart">购物车</string>
    <string name="fragment_account">我</string>
    <string name="magic_title">家 居 软 装 魔 法</string>
    <string name="magic_text_one">HOME FURNISHING</string>
    <string name="magic_text_two">SOFT OUTFIT</string>
    <string name="fragment_magic_btn">联系客服</string>
    <string name="fragment_magic_classic_case">改造案例</string>
    <string name="fragment_magic_choose_consult">软装指南</string>
    <string name="fragment_magic_image_case">软装图库</string>
    <string name="fragment_magic_online_design">在线设计</string>
    <string name="fragment_magic_classroom">色彩课堂</string>
    <string name="fragment_magic_diy">DIY搭配</string>
    <string name="magic_diy_title">DIY</string>
    <string name="magic_classic_title">改造案例</string>
    <string name="day_day">天天刮奖</string>
    <string name="enter">用户登录</string>
    <string name="magic_online_title">在线设计</string>
    <string name="magic_choose_back">返回</string>
    <string name="magic_choose_child_title">问答详情</string>
    <string name="magic_images_title">软装图库</string>
    <string name="magic_classroom_title">色彩课堂</string>
</resources>
